@@ -48,6 +48,7 @@ import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 import static uk.gov.hmcts.reform.judicialapi.util.RefDataUtil.createPageableObject;
+import static uk.gov.hmcts.reform.judicialapi.util.RefDataUtil.distinctByKeys;
 
 @Slf4j
 @Service
@@ -94,7 +95,7 @@ public class JudicialUserServiceImpl implements JudicialUserService {
 
         List<OrmResponse> ormResponses = userProfiles.stream()
                 .map(OrmResponse::new)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity
                 .status(200)
@@ -118,7 +119,7 @@ public class JudicialUserServiceImpl implements JudicialUserService {
                         userSearchRequest.getServiceCode(), userSearchRequest.getLocation(), ticketCode);
 
         var userSearchResponses = userProfiles
-                .stream()
+                .stream().filter(distinctByKeys(UserProfile::getPersonalCode))
                 .map(UserSearchResponse::new)
                 .collect(Collectors.toUnmodifiableList());
 
@@ -240,10 +241,10 @@ public class JudicialUserServiceImpl implements JudicialUserService {
                 .isMagistrate(v.get(0).getIsMagistrate())
                 .appointments(v.stream()
                         .flatMap(i -> i.getAppointments().stream())
-                        .collect(Collectors.toList()))
+                        .toList())
                 .authorisations(v.stream()
                         .flatMap(i -> i.getAuthorisations().stream())
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build()));
 
         log.info("userProfileList size = {}", userProfileList.size());
@@ -400,16 +401,16 @@ public class JudicialUserServiceImpl implements JudicialUserService {
             Authorisation auth, List<ServiceCodeMapping> serviceCodeMappings) {
         log.info("{} : starting build Authorisation Refresh Response Dto ", loggingComponentName);
 
-        String serviceCode = serviceCodeMappings.stream()
+        List<String> serviceCode = serviceCodeMappings.stream()
                 .filter(s -> s.getTicketCode().equalsIgnoreCase(auth.getTicketCode()))
                 .map(ServiceCodeMapping::getServiceCode)
-                .collect(Collectors.joining(","));
+                .toList();
 
         return AuthorisationRefreshResponse.builder()
                 .jurisdiction(auth.getJurisdiction())
                 .ticketDescription(auth.getLowerLevel())
                 .ticketCode(auth.getTicketCode())
-                .serviceCode(serviceCode)
+                .serviceCodes(serviceCode)
                 .startDate(null != auth.getStartDate() ? String.valueOf(auth.getStartDate()) : null)
                 .endDate(null != auth.getEndDate() ? String.valueOf(auth.getEndDate()) : null)
                 .build();
@@ -424,7 +425,7 @@ public class JudicialUserServiceImpl implements JudicialUserService {
         log.info("{} : starting get RoleId List ", loggingComponentName);
         return judicialRoleTypes.stream()
                 .filter(e -> e.getEndDate() == null || !e.getEndDate().toLocalDate().isBefore(LocalDate.now()))
-                .map(JudicialRoleType::getTitle).collect(Collectors.toList());
+                .map(JudicialRoleType::getTitle).toList();
     }
 
 }
